<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_input"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/myfont"
        android:letterSpacing="0.2"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_20sdp"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        android:textColor="@color/tv_color"
        app:layout_constraintBottom_toTopOf="@id/tv_output"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/_0" />

    <TextView
        android:id="@+id/tv_output"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_6sdp"
        android:layout_marginVertical="@dimen/_4sdp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/bc_radius"
        android:fontFamily="@font/myfont"
        android:textColor="@color/tv_color"
        android:letterSpacing="0.2"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/_0"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_6sdp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/myfont"
        android:textColor="@color/raspberry_red"
        android:letterSpacing="0.2"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_2sdp"
        tools:text="This is error"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/table_calc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:id="@+id/table_calc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_4sdp"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_clear"
                style="@style/btn_calc_style"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="@dimen/_2sdp"
                android:backgroundTint="@color/royal_blue"
                android:text="@string/c"
                app:cornerRadius="@dimen/_10sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_left_bracket"
                style="@style/btn_calc_style"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="@dimen/_2sdp"
                android:backgroundTint="@color/orange_yellow"
                android:text="@string/bracket_left"
                app:cornerRadius="@dimen/_10sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_right_bracket"
                style="@style/btn_calc_style"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="@dimen/_2sdp"
                android:backgroundTint="@color/orange_yellow"
                android:text="@string/bracket_right"
                app:cornerRadius="@dimen/_10sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_division"
                style="@style/btn_calc_style"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="@dimen/_2sdp"
                android:backgroundTint="@color/orange_yellow"
                android:text="@string/division"
                app:cornerRadius="@dimen/_10sdp" />

        </TableRow>

        <TableRow>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_7"
                style="@style/btn_calc_style"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="@dimen/_2sdp"
                android:backgroundTint="@color/gray"
                android:text="@string/_7"
                app:cornerRadius="@dimen/_10sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_8"
                style="@style/btn_calc_style"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="@dimen/_2sdp"
                android:backgroundTint="@color/gray"
                android:text="@string/_8"
                app:cornerRadius="@dimen/_10sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_9"
                style="@style/btn_calc_style"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="@dimen/_2sdp"
                android:backgroundTint="@color/gray"
                android:text="@string/_9"
                app:cornerRadius="@dimen/_10sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_multiplication"
                style="@style/btn_calc_style"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="@dimen/_2sdp"
                android:backgroundTint="@color/orange_yellow"
                android:text="@string/multiplication"
                app:cornerRadius="@dimen/_10sdp" />

        </TableRow>

        <TableRow>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_4"
                style="@style/btn_calc_style"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="@dimen/_2sdp"
                android:backgroundTint="@color/gray"
                android:text="@string/_4"
                app:cornerRadius="@dimen/_10sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_5"
                style="@style/btn_calc_style"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="@dimen/_2sdp"
                android:backgroundTint="@color/gray"
                android:text="@string/_5"
                app:cornerRadius="@dimen/_10sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_6"
                style="@style/btn_calc_style"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="@dimen/_2sdp"
                android:backgroundTint="@color/gray"
                android:text="@string/_6"
                app:cornerRadius="@dimen/_10sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_subtraction"
                style="@style/btn_calc_style"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="@dimen/_2sdp"
                android:backgroundTint="@color/orange_yellow"
                android:text="@string/subtraction"
                app:cornerRadius="@dimen/_10sdp" />

        </TableRow>

        <TableRow>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_1"
                style="@style/btn_calc_style"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="@dimen/_2sdp"
                android:backgroundTint="@color/gray"
                android:text="@string/_1"
                app:cornerRadius="@dimen/_10sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_2"
                style="@style/btn_calc_style"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="@dimen/_2sdp"
                android:backgroundTint="@color/gray"
                android:text="@string/_2"
                app:cornerRadius="@dimen/_10sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_3"
                style="@style/btn_calc_style"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="@dimen/_2sdp"
                android:backgroundTint="@color/gray"
                android:text="@string/_3"
                app:cornerRadius="@dimen/_10sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_addition"
                style="@style/btn_calc_style"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="@dimen/_2sdp"
                android:backgroundTint="@color/orange_yellow"
                android:text="@string/addition"
                app:cornerRadius="@dimen/_10sdp" />

        </TableRow>

        <TableRow>

            <ImageButton
                android:id="@+id/btn_delete_last"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginHorizontal="@dimen/_2sdp"
                android:background="@null"
                android:contentDescription="@string/app_name"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="@dimen/_8sdp"
                android:scaleType="fitCenter"
                app:tint="@color/tv_color"
                android:src="@drawable/ic_delete"
                tools:ignore="UnusedAttribute"
                tools:targetApi="m" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_0"
                style="@style/btn_calc_style"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="@dimen/_2sdp"
                android:backgroundTint="@color/gray"
                android:text="@string/_0"
                app:cornerRadius="@dimen/_10sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dot"
                style="@style/btn_calc_style"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="@dimen/_2sdp"
                android:backgroundTint="@color/gray"
                android:text="@string/dot"
                app:cornerRadius="@dimen/_10sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_equals"
                style="@style/btn_calc_style"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="@dimen/_2sdp"
                android:backgroundTint="@color/raspberry_red"
                android:text="@string/equals"
                app:cornerRadius="@dimen/_10sdp" />

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>